<resources>
    <string name="app_name">Project0</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dashTitle">My Nanodegree Apps</string>
    <string name="media_streamer">spotify streamer</string>
    <string name="super_duo1">scores app</string>
    <string name="super_duo2">library app</string>
    <string name="ant_terminator">build it bigger</string>
    <string name="materialize">bacon reader</string>
    <string name="capstone">capstone: my own app</string>
</resources>
