<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashBoardActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dashTitle"
        android:textSize="25sp" />

    <Button
        android:id="@+id/spotify_streamer_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#F08C35"
        android:text="@string/media_streamer"
        android:textSize="15sp" />

    <Button
        android:id="@+id/scores_app_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="#F08C35"
        android:text="@string/super_duo1"
        android:textSize="15sp" />

    <Button
        android:id="@+id/library_app_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="#F08C35"
        android:text="@string/super_duo2"
        android:textSize="15sp" />

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="#F08C35"
        android:text="@string/ant_terminator"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bacon_reader_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="#F08C35"
        android:text="@string/materialize"
        android:textSize="15sp" />

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/capstone"
        android:textSize="15sp" />

</LinearLayout>
